--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       }
     </script>
     <style>
+      :host,
+      html {
+        -webkit-text-size-adjust: 100%;
+        text-size-adjust: 100%;
+      }
       body {
         background-color: #0f172a;
         color: #f8fafc;
